navigation-button-added

--- a/index.html
+++ b/index.html
@@ -1,12 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Cup</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>World Cup</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+            rel="stylesheet"
+        />
+        <script
+            src="https://kit.fontawesome.com/94c2d9a99c.js"
+            crossorigin="anonymous"
+        ></script>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <!-- starting of header section -->
+        <header>
+            <div class="header-display">
+                <div>
+                    <h1 class="header-title">
+                        The Greatest <br />show on the <br />
+                        earth
+                    </h1>
+                    <p class="header-description">
+                        Contrary to popular belief, Lorem Ipsum is not simply
+                        <br />
+
+                        random text. It has roots in a piece of classical Latin
+                        literature <br />
+                        from 45 BC, making it over 2000 years old.
+                    </p>
+                    <button class="live-button">
+                        Watch Live <i class="fa-solid fa-chevron-right"></i>
+                    </button>
+                </div>
+                <div class="header-thumbnail">
+                    <img src="assets/Banner Image.png" alt="" />
+                </div>
+            </div>
+        </header>
+        <!-- header section end here -->
+
+        <!-- main section starts below -->
+        <main>
+            <div class="players">
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="assets/Blog Image.png" alt="" />
+                    </div>
+                    <div class="player-details">
+                        <button class="player-button">Transfer</button>
+                        <h3 class="player-heading">Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h3>
+                            <span><i class="fa-regular fa-clock"></i> 10h</span>
+                            <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="assets/Blog Image.png" alt="" />
+                    </div>
+                    <div class="player-details">
+                        <button class="player-button">Transfer</button>
+                        <h3 class="player-heading">Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h3>
+                            <span><i class="fa-regular fa-clock"></i> 10h</span>
+                            <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="assets/Blog Image.png" alt="" />
+                    </div>
+                    <div class="player-details">
+                        <button class="player-button">Transfer</button>
+                        <h3 class="player-heading">Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h3>
+                            <span><i class="fa-regular fa-clock"></i> 10h</span>
+                            <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="assets/Blog Image.png" alt="" />
+                    </div>
+                    <div class="player-details">
+                        <button class="player-button">Transfer</button>
+                        <h3 class="player-heading">Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h3>
+                            <span><i class="fa-regular fa-clock"></i> 10h</span>
+                            <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="assets/Blog Image.png" alt="" />
+                    </div>
+                    <div class="player-details">
+                        <button class="player-button">Transfer</button>
+                        <h3 class="player-heading">Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h3>
+                            <span><i class="fa-regular fa-clock"></i> 10h</span>
+                            <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="assets/Blog Image.png" alt="" />
+                    </div>
+                    <div class="player-details">
+                        <button class="player-button">Transfer</button>
+                        <h3 class="player-heading">Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h3>
+                            <span><i class="fa-regular fa-clock"></i> 10h</span>
+                            <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="assets/Blog Image.png" alt="" />
+                    </div>
+                    <div class="player-details">
+                        <button class="player-button">Transfer</button>
+                        <h3 class="player-heading">Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h3>
+                            <span><i class="fa-regular fa-clock"></i> 10h</span>
+                            <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="assets/Blog Image.png" alt="" />
+                    </div>
+                    <div class="player-details">
+                        <button class="player-button">Transfer</button>
+                        <h3 class="player-heading">Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h3>
+                            <span><i class="fa-regular fa-clock"></i> 10h</span>
+                            <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-banner">
+                        <img src="assets/Blog Image.png" alt="" />
+                    </div>
+                    <div class="player-details">
+                        <button class="player-button">Transfer</button>
+                        <h3 class="player-heading">Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h3>
+                            <span><i class="fa-regular fa-clock"></i> 10h</span>
+                            <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="aside-section">
+                <button class="aside-button"><a href="">Upcoming Match</a></button>
+                <button class="aside-button unique-button"><a href="">All Group</a></button>
+                <button class="aside-button unique-button2"><a href="">Blog</a></button>
+            </div>
+        </main>
+    </body>
 </html>
