footer-responsiveness-done

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <!-- footer section is starting soon -->
 
       <footer class="terms">
-        <h2>Goal</h2>
+        <h2 class="footer-heading">Goal</h2>
             <hr>
           <div class="services">
             <a class="contact-info" href="">Contact Us</a>
